fixed the hero letter spacing on mobile

--- a/css/managedIt.css
+++ b/css/managedIt.css
@@ -276,7 +276,7 @@
         position: static;
     }
     .managed-hero-header {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
     }
         
     .managed-hero-text {
